syntax = "proto3";

option go_package = "/pb";

package pb;

service MyService {
  rpc MyMethod(Request) returns (Response);
  rpc AddProduct(AddProductRequest)returns (Response);
  rpc RemoveProduct(RemoveProductRequest)returns(Response);
}

message Request {
  string data = 1;
}

message Response {
  string result = 1;
}

message AddProductRequest{
    string name     = 1;       
	int32  price    = 2;     
	string imageURL = 3;       
	string category = 4;   
	int32  adminId  = 5; 
}

message RemoveProductRequest{
   int32 productid = 1;
}


